Updated all examples and vignettes to use Dilution dataset, not defunct affybatch.example. Bumped version.
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/RefPlus@34625 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/inst/doc/RefPlus.Rnw
+++ b/inst/doc/RefPlus.Rnw
@@ -98,10 +98,10 @@ reference sets.
 The Dilution dataset in the \texttt{affydata} package consists of 4 microarray
 samples. 
 <<>>=
-##Use affybatch.example in affy package
+##Use Dilution in affy package
 library(RefPlus)
 library(affydata)
-##data(affybatch.example)
+##data(Dilution)
 data(Dilution)
 sampleNames(Dilution)
 @
@@ -127,7 +127,7 @@ microarrays.
 
 <<>>=
 ##Calculate the RMA+ intensity using rmaplus function. 
-##Ex2 <- rmaplus(affybatch.example, rmapara=Para, bg = TRUE)
+##Ex2 <- rmaplus(Dilution, rmapara=Para, bg = TRUE)
 Ex2 <- rmaplus(Dilution, rmapara=Para, bg = TRUE)
 @
 
