git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/RefPlus@36229 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/inst/doc/RefPlus.Rnw
+++ b/inst/doc/RefPlus.Rnw
@@ -21,11 +21,11 @@
 
 \title{\RMAp\ and \RMApp\ using the \texttt{RefPlus} package}
 \author{Kai-Ming Chang, Chris Harbron, Marie C South\\
-kaiming@mail.kfcc.org.tw\\
+kaiming@kfsyscc.org\\
 Chris.Harbron@astrazeneca.com\\
 Marie.C.South@astrazeneca.com
 }
-\date{Nov 1, 2007}
+\date{Dec 23, 2008}
 \maketitle
 
 %\setlength{\parskip}{0pt}
