Pull Dilution data set from affydata package.
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/RefPlus@36882 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/inst/doc/RefPlus.Rnw
+++ b/inst/doc/RefPlus.Rnw
@@ -98,10 +98,9 @@ reference sets.
 The Dilution dataset in the \texttt{affydata} package consists of 4 microarray
 samples. 
 <<>>=
-##Use Dilution in affy package
+##Use Dilution in affydata package
 library(RefPlus)
 library(affydata)
-##data(Dilution)
 data(Dilution)
 sampleNames(Dilution)
 @
@@ -127,7 +126,6 @@ microarrays.
 
 <<>>=
 ##Calculate the RMA+ intensity using rmaplus function. 
-##Ex2 <- rmaplus(Dilution, rmapara=Para, bg = TRUE)
 Ex2 <- rmaplus(Dilution, rmapara=Para, bg = TRUE)
 @
 
